--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application to model an address book in Node",
   "main": "\u001b[D\u001b[D\u001b[D\u001bapp\u001b[C\u001b[C\u001b[C\u001b\u001b[C\u001b[C\u001bapp.js\u001b[C\u001b[C\u001b[C",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"test": "SET NODE_ENV=test && jasmine"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/kerryja/address-bloc#readme",
   "dependencies": {
     "inquirer": "^5.1.0"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0"
   }
 }
