--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An application to model an address book in Node",
   "main": "\u001b[D\u001b[D\u001b[D\u001bapp\u001b[C\u001b[C\u001b[C\u001b\u001b[C\u001b[C\u001bapp.js\u001b[C\u001b[C\u001b[C",
   "scripts": {
-		"test": "SET NODE_ENV=test && jasmine"
+    "test": "SET NODE_ENV=test && jasmine"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/kerryja/address-bloc#readme",
   "dependencies": {
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
   },
   "devDependencies": {
     "jasmine": "^3.1.0"
